--- a/index.html
+++ b/index.html
@@ -1,9 +1,71 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>ProjectDesignCo
+    </title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-  <h1>Daniel Faubert</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <div class="header">
+        <nav>
+            <h3>Project Design Co</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Gallery</a></li>
+            </ul>
+        </nav>
+
+        <h1>This website is Awesome</h1>
+        <p class="light-grey">This website has some kind of text that goes here under the main title. It's a smaller
+            font and lower
+            contrast.</p>
+        <button>Sign Up</button>
+        <img>
+    </div>
+
+    <div class="section-2">
+        <h3>Some Random Information</h3>
+        <div class="image-block">
+            <img src="./images/Dummy1.jpg" alt="This is the first dummy image.">
+            <p>this is some subtext under an image</p>
+
+            <img src="./images/Dummy2.jpg" alt="This is the second dummy image.">
+            <p>this is some subtext under an image</p>
+
+            <img src="./images/Dummy3.jpg" alt="This is the third dummy image.">
+            <p>this is some subtext under an image</p>
+
+            <img src="./images/Dummy4.jpg" alt="This is the fourth dummy image.">
+            <p>this is some subtext under an image</p>
+        </div>
+
+        <div class="quote-section">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's filling up space,
+                or maybe people will actually read it. Who knows? All I know is it looks nice.</p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="estimate">
+            <h6 class="popup">Call to action. It's time!</h6>
+            <p>Sign up for a free estimate by clicking that button over there! </p>
+            <button>Sign Up</button>
+        </div>
+
+        <footer>
+            <p>Copyright The Faubert Project</p>
+        </footer>
+
 </body>
 
 </html>
